--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/node": "^10.12.0",
     "gulp": "^3.*",
     "gulp-concat": "^2.6.1",
+    "gulp-sourcemaps": "^2.6.4",
     "gulp-typescript": "^5.0.0-alpha.3",
     "merge2": "^1.2.3"
   }
